# fair-classification

./: .gitignore  Pipfile  ethicml_test.py  pyproject.toml  pyrightconfig.json
disparate_impact/adult_data_demo/: demo_constraints.py
disparate_impact/run-classifier/: fit.py  main.py  main_fit.py  main_predict.py  predict.py  prepare_adult_data.py
disparate_impact/synthetic_data_demo/: decision_boundary_demo.py  fairness_acc_tradeoff.py
disparate_mistreatment/propublica_compas_data_demo/: demo_constraints.py  load_compas_data.py
disparate_mistreatment/run-classifier/: main.py
disparate_mistreatment/run_classifier/: fit.py  main.py  main_fit.py  main_predict.py  predict.py
disparate_mistreatment/synthetic_data_demo/: decision_boundary_demo.py  fairness_acc_tradeoff.py  generate_synthetic_data.py  plot_syn_boundaries.py
fair_classification/: funcs_disp_mist.py  linear_clf_pref_fairness.py  loss_funcs.py  stats_pref_fairness.py  utils.py
preferential_fairness/adult_data_demo/: demo_constraints.py  prepare_adult_data.py
preferential_fairness/synthetic_data_demo/: decision_boundary_demo.py  generate_synthetic_data.py  plot_synthetic_boundaries.py
src/: types.py
src/disparate_impact/adult_data_demo/: demo_constraints.py  prepare_adult_data.py
src/disparate_impact/run_classifier/: fit.py  main.py  predict.py  prepare_adult_data.py  test.py
src/disparate_impact/synthetic_data_demo/: decision_boundary_demo.py  fairness_acc_tradeoff.py  generate_synthetic_data.py
src/disparate_mistreatment/propublica_compas_data_demo/: demo_constraints.py  load_compas_data.py
src/disparate_mistreatment/run_classifier/: fit.py  main.py  predict.py
src/disparate_mistreatment/synthetic_data_demo/: decision_boundary_demo.py  fairness_acc_tradeoff.py  generate_synthetic_data.py
src/fair_classification/: funcs_disp_mist.py  linear_clf_pref_fairness.py  loss_funcs.py  stats_pref_fairness.py  utils.py
src/preferential_fairness/adult_data_demo/: demo_constraints.py  prepare_adult_data.py
src/preferential_fairness/synthetic_data_demo/: decision_boundary_demo.py  generate_synthetic_data.py
