[project]
name = "fair-classification"
version = ""
description = ""
authors = [
    {name = "Zafar et al."},
]
dependencies = ["scikit-learn==1.2.0", "cvxpy==1.2.2", "dccp==1.0.3", "scipy==1.9.3", "typing-extensions==4.4.0"]
requires-python = ">=3.8"
license = {text = "GPLv3"}

[tool.ruff]
extend-select = ["SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.8"
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "strict"
# these errors are a bit annoying
reportMissingTypeArgument = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
extraPaths = ["__pypackages__/3.10/lib/"]

[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.build]
includes = ["src"]

[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
